--- a/web-app/src/main/resources/templates/index.html
+++ b/web-app/src/main/resources/templates/index.html
@@ -9,6 +9,9 @@
 
   <div>
     <h1>Index画面</h1>
+    <br>
+    <p th:text="${message}"></p>
+    <p th:text="${#temporals.format(datetime, 'yyyy/MM/dd HH:mm:ss')}"></p>
   </div>
 
 </body>
