一覧画面の作成と、index画面からの遷移

--- a/web-app/src/main/resources/templates/index.html
+++ b/web-app/src/main/resources/templates/index.html
@@ -12,6 +12,8 @@
     <br>
     <p th:text="${message}"></p>
     <p th:text="${#temporals.format(datetime, 'yyyy/MM/dd HH:mm:ss')}"></p>
+    <br>
+    <a th:href="@{/user/list}" class="btn btn-primary">ユーザー情報一覧はこちら</a>
   </div>
 
 </body>
