--- a/web-app/src/main/resources/templates/user/list.html
+++ b/web-app/src/main/resources/templates/user/list.html
@@ -1,25 +1,6 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
-<head>
-<meta charset="utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Webアプリケーション</title>
-<!-- Bootstrap -->
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-
-<!-- CSS -->
-<style>
-body {
-  padding: 32px;
-  background-color: lightgray;
-}
-
-div.container {
-  padding: 32px;
-  background-color: white;
-}
-</style>
+<head th:replace="~{common/head :: head_fragment(scripts = ~{::script}, links = ~{::link})}">
 </head>
 <body>
 
